interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
$z-index: 900;
$menu-width: 13vw;
$line-height: 2.26rem;
$toggle-button-bottom: 1rem;
$toggle-button-right: 0.5vw;

#layer-menu-container {
  position: fixed;
  z-index: $z-index;
  bottom: $toggle-button-bottom;
  right: $toggle-button-right;
  width: $menu-width;
  height: $line-height;
  display: flex;
  flex-direction: column;
  max-height: calc(0.625rem + $line-height * 10);

  #layer-menu-toggle-button {
    width: 100%;
    height: $line-height;
    --border-radius: 0;
  }

  #layer-menu {
    width: $menu-width;
    max-height: calc(0.625rem + $line-height * 9);
    bottom: 0px;
    overflow-y: auto;
    ion-row {
      min-height: 36px;
      border: 1px solid var(--ion-color-ibf-no-alert-primary);
      border-top: none;
    }

    ion-item {
      width: 98%;
      --min-height: 36px;
      --padding-bottom: 0;
      --padding-top: 0;
      --padding-start: 4px;
      --padding-end: 4px;
      --inner-padding-start: 0;
      --inner-padding-end: 0;

      ion-spinner {
        width: 18px;
        height: 18px;
      }

      .matrix-toggler {
        width: 18px;
        height: 18px;
        background-color: #fff;
        border: 2px solid var(--ion-color-ibf-no-alert-primary);
        cursor: pointer;

        &.matrix-check {
          border-radius: 2px;
        }

        &.matrix-radio {
          border-radius: 50%;
        }

        .matrix-check-mark {
          width: 16px;
          height: 16px;
          background-color: var(--ion-color-ibf-no-alert-primary);
          stroke: #fff;
          stroke-width: 4px;
        }
        .matrix-radio-circle {
          width: 14px;
          height: 14px;
          background-color: var(--ion-color-ibf-no-alert-primary);
          border: 2px solid #fff;
          border-radius: 50%;
        }
      }

      ion-label {
        width: 80%;
        font-size: 12px;
      }

      .info-button {
        --background-hover: #fff;
        --ripple-color: #fff;
      }
      .info-icon {
        font-size: 24px;

        cursor: pointer;
      }
    }
  }
}

